--- a/_layouts/cv.liquid
+++ b/_layouts/cv.liquid
@@ -11,7 +11,7 @@ layout: default
             {% if page.cv_pdf contains '://' %}
               href="{{ page.cv_pdf }}"
             {% else %}
-              href="{{ page.cv_pdf | prepend: 'cv/' | relative_url }}"
+              href="cv/{{ page.cv_pdf }}"
             {% endif %}
             target="_blank"
             rel="noopener noreferrer"
@@ -66,14 +66,13 @@ layout: default
             {% if page.cv_pdf contains '://' %}
               href="{{ page.cv_pdf }}"
             {% else %}
-              href="{{ page.cv_pdf | prepend: 'cv/' | relative_url }}"
+              href="cv/{{ page.cv_pdf }}"
             {% endif %}
             target="_blank"
             rel="noopener noreferrer"
             class="float-right"
           >
             <i class="fa-solid fa-file-pdf"></i>
-          </a>
         {% endif %}
       </h1>
       {% if page.description %}
