--- a/_layouts/cv.liquid
+++ b/_layouts/cv.liquid
@@ -11,7 +11,7 @@ layout: default
             {% if page.cv_pdf contains '://' %}
               href="{{ page.cv_pdf }}"
             {% else %}
-              href="cv/{{ page.cv_pdf }}"
+              href="{{ page.cv_pdf }}"
             {% endif %}
             target="_blank"
             rel="noopener noreferrer"
@@ -66,7 +66,7 @@ layout: default
             {% if page.cv_pdf contains '://' %}
               href="{{ page.cv_pdf }}"
             {% else %}
-              href="cv/{{ page.cv_pdf }}"
+              href="{{ page.cv_pdf }}"
             {% endif %}
             target="_blank"
             rel="noopener noreferrer"
